# Agents-Assemble

./: README.md  docker-compose.yml
backend/: .gitignore  pyproject.toml  test_agent.py
backend/alembic/: env.py
backend/alembic/versions/: 1188905b2a02_add_user_id_allowing_nulls.py  6de76eb17056_add_research_tasks_table_with_jsonb.py  8a42da5e464e_initial_tables.py  fb0ad0d47235_add_research_tasks_table_with_jsonb.py
backend/app/: main.py
backend/app/agents/: researcher.py
backend/app/api/: deps.py
backend/app/api/endpoints/: agents.py  websockets.py
backend/app/api/routers/: auth.py
backend/app/core/: config.py  redis.py  security.py  websockets.py
backend/app/db/: base.py  session.py
backend/app/models/: __init__.py  core.py  research.py
backend/app/schemas/: agent.py  token.py  user.py
backend/app/services/: broadcaster.py  cache.py
backend/app/workers/: celery_app.py  tasks.py
frontend/: .gitignore  pyproject.toml
frontend/src/: api_client.py  config.py  main.py
frontend/src/components/: auth.py  chat_ui.py  sidebar.py
frontend/src/utils/: helpers.py  styles.py
