[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "agno>=2.6.17",
    "alembic>=1.18.4",
    "asyncpg>=0.31.0",
    "bcrypt==4.3.0",
    "celery>=5.6.3",
    "fastapi>=0.137.0",
    "greenlet>=3.5.1",
    "groq>=1.4.0",
    "orjson>=3.11.9",
    "passlib[bcrypt]>=1.7.4",
    "pydantic-settings>=2.14.1",
    "pydantic[email]>=2.13.4",
    "pyjwt>=2.13.0",
    "python-dotenv>=1.2.2",
    "python-multipart>=0.0.32",
    "redis>=8.0.0",
    "sqlalchemy>=2.0.50",
    "tavily-python>=0.7.26",
    "uvicorn>=0.49.0",
    "websockets>=16.0",
]
